--- a/app/index.html
+++ b/app/index.html
@@ -1,93 +1,156 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
-  </head>
-  <body ng-app="scssApp">
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width">
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <!-- build:css(.) styles/vendor.css -->
+  <!-- bower:css -->
+  <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+  <link rel="stylesheet" href="bower_components/angular-material-icons/angular-material-icons.css" />
+  <!-- endbower -->
+  <!-- endbuild -->
+  <!-- build:css(.tmp) styles/main.css -->
+  <link rel="stylesheet" href="styles/main.css">
+  <!-- endbuild -->
+
+  <style>
+    textarea#demo{
+      height: 100%;
+      width:100%;
+      resize: none;
+
+      /* The following three rules make a difference in the script */
+      overflow:hidden;
+      line-height: 13px;
+      font-size: 13px;
+      border:1px solid #999;
+      padding:10px;
+      font-family: monospace;
+      margin:0;
+      display:block;
+      outline:none;     
+    }
+    textarea:focus{
+      border-color:#333;
+    }
+    .line-nums{
+      font-size:13px;
+      line-height:13px;
+      padding:10px 4px;
+      font-family: monospace;
+      background: #EEE;
+      position: absolute;
+      width: 20px;
+      left: -28px;
+      bottom: 0;
+      top: 0;
+      text-align:right;
+    }
+  </style>
+</head>
+<body ng-app="scssApp" ng-cloak layout="column">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
+      <![endif]-->
 
-    <!-- Add your site or application content here -->
-    <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
+      <div ng-include="'views/header.html'"></div>
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-
-            <a class="navbar-brand" href="#/">scss</a>
-          </div>
-
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-    <div ng-view=""></div>
-    </div>
-
-    <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
-    </div>
+      
+      <div ui-view="" flex layout="column"></div>  
 
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
+   <!--    <div ng-include="'views/footer.html'"></div>
+ -->
 
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-messages/angular-messages.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        <!-- endbuild -->
-</body>
-</html>
+ <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+ <script>
+   !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
+     (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
+     r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
+   }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+   ga('create', 'UA-XXXXX-X');
+   ga('send', 'pageview');
+ </script>
+
+ <!-- build:js(.) scripts/vendor.js -->
+ <!-- bower:js -->
+ <script src="bower_components/jquery/dist/jquery.js"></script>
+ <script src="bower_components/angular/angular.js"></script>
+ <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
+ <script src="bower_components/angular-animate/angular-animate.js"></script>
+ <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+ <script src="bower_components/angular-messages/angular-messages.js"></script>
+ <script src="bower_components/angular-resource/angular-resource.js"></script>
+ <script src="bower_components/angular-route/angular-route.js"></script>
+ <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+ <script src="bower_components/angular-touch/angular-touch.js"></script>
+ <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+ <script src="bower_components/angular-aria/angular-aria.js"></script>
+ <script src="bower_components/angular-material/angular-material.js"></script>
+ <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
+ <!-- endbower -->
+ <!-- endbuild -->
+
+ <!-- build:js({.tmp,app}) scripts/scripts.js -->
+ <script src="scripts/app.js"></script>
+ <script src="scripts/controllers/main.js"></script>
+ <script src="scripts/controllers/about.js"></script>
+ <script src="scripts/controllers/panel.js"></script>
+ <script src="scripts/controllers/home.js"></script>     
+ <script src="scripts/controllers/header.js"></script>
+ <!-- endbuild -->
+
+ <script src="scripts/behave.js"></script>
+
+ <script type="text/javascript">
+
+  window.onload = function(){
+
+      /*
+       * This hook adds autosizing functionality
+       * to your textarea
+       */
+       BehaveHooks.add(['keydown'], function(data){
+        var numLines = data.lines.total,
+        fontSize = parseInt( getComputedStyle(data.editor.element)['font-size'] ),
+        padding = parseInt( getComputedStyle(data.editor.element)['padding'] );
+        data.editor.element.style.height = (((numLines*fontSize)+padding))+'px';
+      });
+
+      /*
+       * This hook adds Line Number Functionality
+       */
+       BehaveHooks.add(['keydown'], function(data){
+        var numLines = data.lines.total,
+        house = document.getElementsByClassName('line-nums')[0],
+        html = '',
+        i;
+        for(i=0; i<numLines; i++){
+          html += '<div>'+(i+1)+'</div>';
+        }
+        house.innerHTML = html;
+      });
+
+       var editor = new Behave({
+
+        textarea:     document.getElementById('demo'),
+        replaceTab:   true,
+        softTabs:     true,
+        tabSize:    4,
+        autoOpen:     true,
+        overwrite:    true,
+        autoStrip:    true,
+        autoIndent:   true
+      });
+
+     };
+   </script>
+ </body>
+ </html>
