--- a/app/index.html
+++ b/app/index.html
@@ -9,46 +9,15 @@
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
   <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
-  <link rel="stylesheet" href="bower_components/angular-material-icons/angular-material-icons.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
   <style>
-    textarea#demo{
-      height: 100%;
-      width:100%;
-      resize: none;
-
-      /* The following three rules make a difference in the script */
-      overflow:hidden;
-      line-height: 13px;
-      font-size: 13px;
-      border:1px solid #999;
-      padding:10px;
-      font-family: monospace;
-      margin:0;
-      display:block;
-      outline:none;     
-    }
-    textarea:focus{
-      border-color:#333;
-    }
-    .line-nums{
-      font-size:13px;
-      line-height:13px;
-      padding:10px 4px;
-      font-family: monospace;
-      background: #EEE;
-      position: absolute;
-      width: 20px;
-      left: -28px;
-      bottom: 0;
-      top: 0;
-      text-align:right;
-    }
+    
   </style>
 </head>
 <body ng-app="scssApp" ng-cloak layout="column">
@@ -94,7 +63,6 @@
  <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
  <script src="bower_components/angular-aria/angular-aria.js"></script>
  <script src="bower_components/angular-material/angular-material.js"></script>
- <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
  <!-- endbower -->
  <!-- endbuild -->
 
@@ -140,7 +108,7 @@
 
        var editor = new Behave({
 
-        textarea:     document.getElementById('demo'),
+        textarea:     document.getElementById('code-editor'),
         replaceTab:   true,
         softTabs:     true,
         tabSize:    4,
