--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,7 @@
  <script src="scripts/controllers/panel.js"></script>
  <script src="scripts/controllers/home.js"></script>     
  <script src="scripts/controllers/header.js"></script>
+ <script src="scripts/controllers/authentication.js"></script>
  <!-- endbuild -->
 
  <script src="scripts/behave.js"></script>
