--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     
   </style>
 </head>
-<body ng-app="scssApp" ng-cloak layout="column">
+<body ng-app="scssApp" ng-cloak layout="column" ng-controller="HeaderCtrl" md-theme="{{theme}}" md-theme-watch="true">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
@@ -74,6 +74,7 @@
  <script src="scripts/controllers/home.js"></script>     
  <script src="scripts/controllers/header.js"></script>
  <script src="scripts/controllers/authentication.js"></script>
+ <script src="scripts/directives/user_avatar.js"></script>
  <!-- endbuild -->
 
  <script src="scripts/behave.js"></script>
